Created startFrom parameters for channelHistory route. Added signature fields to models and DB. Redone getLatestMessage to getLatestMessageSyId, getLatestMessageBySignature and to getChannelBySignature. Deleted channelHistory.service file. Added getUserHistory method similar to getChannelHistory. Added port to DB config.
