# api/controllers/userHistory.controller.js
@@ -1,11 +1,11 @@
 'use strict';
 
-const ChannelService = require('../services/channel.service');
+const UserService = require('../services/user.service');
 const sendStatus = require('../services/sendStatus')
 
 module.exports = {
-    getChannelHistory(req, res) {
-        let channelHistory = new ChannelService();
+    getUserHistory(req, res) {
+        let userHistory = new UserService();
         let startFrom = {
             moreThan: req.query.more_than,
             lessThan: req.query.less_than
@@ -13,7 +13,7 @@ module.exports = {
         if (startFrom.moreThan && startFrom.lessThan) {
             res.json(sendStatus.responseErr('Not allowed to request both of less_ and more_than fields'))
         }
-        channelHistory.getChannelHistory(req.query.key, startFrom).then(result => {
+        userHistory.getUserHistory(req.query.key, startFrom).then(result => {
             if (result instanceof Error) {
                 res.json(sendStatus.responseErr(result.message));
             }
